--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,20 @@
 
 <body>
     <main>
-        <div class="game-area"></div>
+
+        <div class="game-area">
+            <div class="scores">
+                <div class="p1-score">0%</div>
+                <div class="p2-score">0%</div>
+            </div>
+        </div>
         <div class="controls">
             <div class="bucket-container">
-                <div class="bucket">test</div>
+                <div class="bucket"></div>
             </div>
+        </div>
+        <div class="player-switch">
+            <div class="switch-button">switch</div>
         </div>
     </main>
     <script src="/js/main.js" type="module"></script>
